[project]
name = "moonbeamai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "base-agent>=2025.5.180920",
    "fastapi>=0.115.12",
    "googlenews>=1.6.15",
    "torch>=2.7.0",
    "transformers>=4.52.2",
    "uvicorn>=0.34.2",
    "werkzeug>=3.1.3",
]
