[project]
name = "moonbeamai"
version = "2.0.0"
description = "Financial news sentiment analysis system that generates real-time trading signals through a multi-agent AI pipeline"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MoonbeamAI Team", email = "team@moonbeamai.com"}
]
keywords = [
    "financial-analysis",
    "sentiment-analysis", 
    "trading-signals",
    "news-analysis",
    "ai-agents",
    "fastapi",
    "nlp"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "base-agent>=2025.5.180920",
    "fastapi>=0.115.12",
    "googlenews>=1.6.15",
    "torch>=2.7.0",
    "transformers>=4.52.2",
    "uvicorn>=0.34.2",
    "werkzeug>=3.1.3",
    "flask>=3.1.1",
    "flask-socketio>=5.5.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "aiohttp>=3.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "websockets>=10.4",
]

[project.urls]
Homepage = "https://github.com/yourusername/moonbeamAI"
Documentation = "https://github.com/yourusername/moonbeamAI/blob/main/README.md"
Repository = "https://github.com/yourusername/moonbeamAI"
"Bug Tracker" = "https://github.com/yourusername/moonbeamAI/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
moonbeam-api = "api:app"
moonbeam-flask = "app:app"
